tests/fails/any_additional_comma.rs
use aa_regex::*;

fn main() {
    let wrong = any!('C',);
    let wrong = any!(,);
}
