tests/fails/any_additional_comma.stderr
error: unexpected end of input, expected literal
 --> $DIR/any_additional_comma.rs:4:17
  |
4 |     let wrong = any!('C',);
  |                 ^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal
 --> $DIR/any_additional_comma.rs:5:22
  |
5 |     let wrong = any!(,);
  |                      ^
